--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <body>
     <!-- Player de música de fundo -->
     <audio id="background-music" loop>
-      <source src="/audio/novo-mundo.mp3" type="audio/mp3">
+      <source src="/audio/entre-dois-mundos-filha.mp3" type="audio/mp3">
       Seu navegador não suporta o elemento de áudio.
     </audio>
 
