Corrigir links das músicas, aumentar volume e adicionar comentário em Julia

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <!-- Controle de volume -->
     <div class="volume-control">
-      <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="0.2">
+      <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="0.5">
     </div>
 
     <div class="container">
@@ -145,7 +145,7 @@
               <h3 class="track-title">Novo Mundo</h3>
               <p class="track-description">Single • 2024</p>
             </div>
-            <a href="https://youtu.be/mxD-aY13H14?si=qgQhXZ7sFVzmGkq0" target="_blank" class="track-play">
+            <a href="https://open.spotify.com/intl-pt/artist/4JpSt47bo8afDdSu7DqSH4?si=-jRW8C67Sa604ONTrbhwPg" target="_blank" class="track-play">
               <div class="play-button"></div>
             </a>
           </div>
@@ -158,7 +158,7 @@
               <h3 class="track-title">Entre Dois Mundos Filha</h3>
               <p class="track-description">Single • 2024</p>
             </div>
-            <a href="https://open.spotify.com/intl-pt/artist/4JpSt47bo8afDdSu7DqSH4?si=3mR-qTZzSiiRLSwyekultw" target="_blank" class="track-play">
+            <a href="https://youtu.be/mxD-aY13H14?si=qgQhXZ7sFVzmGkq0" target="_blank" class="track-play">
               <div class="play-button"></div>
             </a>
           </div>
@@ -183,9 +183,9 @@
         const pauseIcon = document.getElementById('pause-icon');
         const volumeSlider = document.getElementById('volume-slider');
 
-        // Definir volume inicial para 0.2 (20%)
-        music.volume = 0.2;
-        volumeSlider.value = 0.2;
+        // Definir volume inicial para 0.5 (50%)
+        music.volume = 0.5;
+        volumeSlider.value = 0.5;
 
         // Tentar reproduzir automaticamente
         // Obs: A maioria dos navegadores bloqueará o autoplay a menos que o usuário
@@ -213,6 +213,31 @@
         volumeSlider.addEventListener('input', function() {
           music.volume = this.value;
         });
+
+        /*
+        # Implementação do algoritmo de notas musicais em Julia
+        # (Este é apenas um comentário educativo mostrando como seria em Julia)
+
+        function criar_nota_musical(x, y)
+            # Definição das notas musicais em SVG
+            notas_musicais = [
+                "<svg viewBox='0 0 24 24'><path d='M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z'/></svg>",
+                "<svg viewBox='0 0 24 24'><path d='M16 6v8h3v-8h2V4h-5v2zm-5 8l5-8H9l5 8z'/></svg>"
+            ]
+
+            # Selecionar uma nota aleatória
+            nota_aleatoria = notas_musicais[rand(1:length(notas_musicais))]
+
+            # Criar animação com duração aleatória
+            duracao = 2 + rand() * 2  # 2-4 segundos
+            rotacao = -30 + rand() * 60  # -30 a +30 graus
+
+            # Na implementação real, aqui seria criado o elemento DOM
+            println("Nota criada em x=$x, y=$y com duração=$duracao")
+
+            return nota_aleatoria
+        end
+        */
 
         // Efeito de notas musicais no mouse
         const container = document.querySelector('body');
